--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emit - The chatting app built for buisnesses</title>
+    <title>Emit - The Chat App for Businesses</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Create Room</h1>
@@ -28,59 +29,6 @@
     </form>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io();
-
-        document.getElementById('create-form').addEventListener('submit', (e) => {
-            e.preventDefault();
-            const roomName = document.getElementById('create-room-name').value;
-            const password = document.getElementById('create-password').value;
-            fetch('/create-room', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ roomName, password })
-            })
-            .then(response => response.text())
-            .then(data => {
-                alert(data);
-            });
-        });
-
-        document.getElementById('join-form').addEventListener('submit', (e) => {
-            e.preventDefault();
-            const roomName = document.getElementById('join-room-name').value;
-            const password = document.getElementById('join-password').value;
-            fetch('/join-room', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ roomName, password })
-            })
-            .then(response => response.text())
-            .then(data => {
-                alert(data);
-                if (data === 'Authentication successful') {
-                    socket.emit('join-room', roomName);
-                }
-            });
-        });
-
-        document.getElementById('chat-form').addEventListener('submit', (e) => {
-            e.preventDefault();
-            const message = document.getElementById('message-input').value;
-            const roomName = document.getElementById('join-room-name').value;
-            socket.emit('chat-message', { roomName, message });
-            document.getElementById('message-input').value = '';
-        });
-
-        socket.on('chat-message', (message) => {
-            const li = document.createElement('li');
-            li.textContent = message;
-            document.getElementById('messages').appendChild(li);
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
