--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
     <h1>Create Room</h1>
     <form id="create-form">
         <input type="text" id="create-room-name" placeholder="Room Name">
@@ -28,7 +29,7 @@
         <input type="text" id="message-input" placeholder="Message">
         <button type="submit">Send</button>
     </form>
-
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
