--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <div class="container">
+    <div class="jumbotron">
+    <h1>NEW UPDATE!</h1>
+    <p>- Updated server-side code to generate unique room IDs and store room information. <br>
+- Added a new route to handle direct room access using room IDs. <br>
+- Modified client-side code to allow users to join rooms using room IDs.<br>
+- Updated HTML to include input field for room ID in the join form.</p>
+  </div>
         <h1>Create Room</h1>
         <form id="create-form">
             <input type="text" id="create-room-name" placeholder="Room Name">
