--- a/public/index.html
+++ b/public/index.html
@@ -6,92 +6,12 @@
     <title>Emit - The Chatting App for Communities</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <meta http-equiv="refresh" content="3; URL=sunset.html" />
 </head>
 <body>
     <div class="container">
-    <div class="jumbotron">
-    <h1>NEW UPDATE!</h1>
-    <p>- Updated server-side code to generate unique room IDs and store room information. <br>
-- Added a new route to handle direct room access using room IDs. <br>
-- Modified client-side code to allow users to join rooms using room IDs.<br>
-- Updated HTML to include input field for room ID in the join form.</p>
-  </div>
-        <h1>Create Room</h1>
-        <form id="create-form">
-            <input type="text" id="create-room-name" placeholder="Room Name">
-            <input type="password" id="create-password" placeholder="Password">
-            <button type="submit">Create</button>
-        </form>
-
-        <h1>Join Room</h1>
-        <form id="join-form">
-            <input type="text" id="join-room-id" placeholder="Room ID">
-            <input type="password" id="join-password" placeholder="Password">
-            <button type="submit">Join</button>
-        </form>
-
-        <h1>Chat</h1>
-        <ul id="messages"></ul>
-        <form id="chat-form">
-            <input type="text" id="message-input" placeholder="Message">
-            <button type="submit">Send</button>
-        </form>
+        <center><h1>🔴 Emit has begun it's Sunset process. All accounts (and data associated with those accounts) will be deleted on March 1st, 2024. You may read a full blog post here. https://emit-community.netlify.app/sunset.html
+</h1></center>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io();
-
-        document.getElementById('create-form').addEventListener('submit', (e) => {
-            e.preventDefault(); // Prevent default form submission behavior
-            const roomName = document.getElementById('create-room-name').value;
-            const password = document.getElementById('create-password').value;
-            fetch('/create-room', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ roomName, password })
-            })
-            .then(response => response.text())
-            .then(data => {
-                alert(data);
-            });
-        });
-
-        document.getElementById('join-form').addEventListener('submit', (e) => {
-            e.preventDefault(); // Prevent default form submission behavior
-            const roomId = document.getElementById('join-room-id').value;
-            const password = document.getElementById('join-password').value;
-            fetch('/join-room', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ roomId, password })
-            })
-            .then(response => response.text())
-            .then(data => {
-                alert(data);
-                if (data === 'Authentication successful') {
-                    socket.emit('join-room', roomId);
-                }
-            });
-        });
-
-        document.getElementById('chat-form').addEventListener('submit', (e) => {
-            e.preventDefault(); // Prevent default form submission behavior
-            const message = document.getElementById('message-input').value;
-            const roomId = document.getElementById('join-room-id').value;
-            socket.emit('chat-message', { roomId, message });
-            document.getElementById('message-input').value = '';
-        });
-
-        socket.on('chat-message', (message) => {
-            const li = document.createElement('li');
-            li.textContent = message;
-            document.getElementById('messages').appendChild(li);
-        });
-    </script>
 </body>
 </html>
